force-app/main/default/objects/SFDC_Target_Company__c/SFDC_Target_Company__c.object-meta.xml
<CustomObject>
    <description>The Interesting Company object is used to store information on companies j2 has researched.</description>
    <label>Interesting Company</label>
    <nameField>
        <label>Target Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interesting Companies</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>