force-app/main/default/objects/SFDC_Target_Company__c/fields/Alexa__c.field-meta.xml
<CustomField>
    <fullName>Alexa__c</fullName>
    <label>Alexa Traffic Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>