force-app/main/default/objects/SFDC_Target_Company__c/fields/Alexa_Traffic_Rank_Date__c.field-meta.xml
<CustomField>
    <fullName>Alexa_Traffic_Rank_Date__c</fullName>
    <label>Alexa Traffic Rank Date</label>
    <type>Date</type>
</CustomField>