force-app/main/default/objects/SFDC_Target_Company__c/fields/Basic_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Basic_Pricing__c</fullName>
    <label>Basic Pricing</label>
    <type>TextArea</type>
</CustomField>