force-app/main/default/objects/SFDC_Target_Company__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City in which the target company is based</description>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>