force-app/main/default/objects/SFDC_Target_Company__c/fields/Company_Bio__c.field-meta.xml
<CustomField>
    <fullName>Company_Bio__c</fullName>
    <description>Company Bio from web-site</description>
    <label>Company Bio</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>