force-app/main/default/objects/SFDC_Target_Company__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country in which the target company is based.</description>
    <label>Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>