force-app/main/default/objects/SFDC_Target_Company__c/fields/Crunch_Base_Profile__c.field-meta.xml
<CustomField>
    <fullName>Crunch_Base_Profile__c</fullName>
    <label>Crunch Base Profile</label>
    <type>Url</type>
</CustomField>