force-app/main/default/objects/SFDC_Target_Company__c/fields/Customer_Segments__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segments__c</fullName>
    <label>Customer Segments</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Professional/SOHO (&lt;5 employees)</fullName>
            </value>
            <value>
                <fullName>Micro Biz (5-25 employees)</fullName>
            </value>
            <value>
                <fullName>Small Biz (25-250 employees)</fullName>
            </value>
            <value>
                <fullName>Enterprise (&gt;250 employees)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>