force-app/main/default/objects/SFDC_Target_Company__c/fields/Existing_Partner__c.field-meta.xml
<CustomField>
    <fullName>Existing_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the Targe Company is an existing partner.</description>
    <label>Existing Partner</label>
    <type>Checkbox</type>
</CustomField>