force-app/main/default/objects/SFDC_Target_Company__c/fields/Expected_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Close_Date__c</fullName>
    <description>Date you expect  the deal to close.</description>
    <label>Expected Close Date</label>
    <type>Date</type>
</CustomField>