force-app/main/default/objects/SFDC_Target_Company__c/fields/Idea_Source__c.field-meta.xml
<CustomField>
    <fullName>Idea_Source__c</fullName>
    <description>Source from which the acquisition opportunity derived.</description>
    <label>Idea Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Employee</fullName>
                <default>true</default>
                <label>Employee</label>
            </value>
            <value>
                <fullName>Existing Partner</fullName>
            </value>
            <value>
                <fullName>Investment Bank / Advisor</fullName>
            </value>
            <value>
                <fullName>Investor</fullName>
            </value>
            <value>
                <fullName>Target Company Itself</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>