force-app/main/default/objects/SFDC_Target_Company__c/fields/Last_Funding_Amount_M__c.field-meta.xml
<CustomField>
    <fullName>Last_Funding_Amount_M__c</fullName>
    <description>The last amount of outside funding the Target Company has raised.</description>
    <label>Last Funding Amount ($M)</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>