force-app/main/default/objects/SFDC_Target_Company__c/fields/Last_Funding_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Funding_Date__c</fullName>
    <description>The date of the last funding round for the Target Company.</description>
    <label>Last Funding Date</label>
    <type>Date</type>
</CustomField>