force-app/main/default/objects/SFDC_Target_Company__c/fields/Markets__c.field-meta.xml
<CustomField>
    <fullName>Markets__c</fullName>
    <label>Markets</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Collaboration Suites</fullName>
            </value>
            <value>
                <fullName>Contacts/eMail Management</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>Electronic Signature</fullName>
            </value>
            <value>
                <fullName>eMail Archiving</fullName>
            </value>
            <value>
                <fullName>eMail Marketing</fullName>
            </value>
            <value>
                <fullName>File Share/Sync/Store</fullName>
            </value>
            <value>
                <fullName>Large File Send</fullName>
            </value>
            <value>
                <fullName>Online Backup</fullName>
            </value>
            <value>
                <fullName>Project Management/Collaboration</fullName>
            </value>
            <value>
                <fullName>Remote Desktop</fullName>
            </value>
            <value>
                <fullName>Voice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>