force-app/main/default/objects/SFDC_Target_Company__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Denotes which stage of the acquisition process the Target Company is currently in.</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inactive</fullName>
                <default>true</default>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>1- Researching</fullName>
            </value>
            <value>
                <fullName>2 - Preliminary Diligence and Valuation</fullName>
            </value>
            <value>
                <fullName>3 - Negotiating Term Sheet</fullName>
            </value>
            <value>
                <fullName>4 - Due Diligence</fullName>
            </value>
            <value>
                <fullName>5 - Drafting Formal Agreement</fullName>
            </value>
            <value>
                <fullName>6 - Signed and Closed</fullName>
            </value>
            <value>
                <fullName>7 - Integraton</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>