force-app/main/default/objects/SFDC_Target_Company__c/fields/Total_Amount_Raised__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Raised__c</fullName>
    <description>The total amount of outside funding the Target Company has raised.</description>
    <label>Total Amount Raised ($M)</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>