force-app/main/default/objects/SFDC_Target_Company__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>Target Company&apos;s website</description>
    <label>Website</label>
    <type>Url</type>
</CustomField>