force-app/main/default/objects/SFDC_Target_Company__c/fields/WebSite_HomePage__c.field-meta.xml
<CustomField>
    <fullName>WebSite_HomePage__c</fullName>
    <description>Insert a home page screen shot and the date of capture</description>
    <label>WebSite HomePage</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>