force-app/main/default/objects/SFDC_Target_Company__c/validationRules/Expected_Close_Date_Inactive.validationRule-meta.xml
<ValidationRule>
    <fullName>Expected_Close_Date_Inactive</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Stage__c ,&quot;Inactive / Not Interested&quot;), Expected_Close_Date__c  &gt; DATEVALUE(&quot;1900-01-01&quot;))</errorConditionFormula>
    <errorDisplayField>Expected_Close_Date__c</errorDisplayField>
    <errorMessage>CANNOT HAVE EXPECTED CLOSE DATE WITH INACTIVE ACCOUNT</errorMessage>
</ValidationRule>