force-app/main/default/objects/SFDC_Target_Company__c/validationRules/Expected_Close_Date_TermSheet.validationRule-meta.xml
<ValidationRule>
    <fullName>Expected_Close_Date_TermSheet</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Stage__c ,&quot;3 - Negotiating Term Sheet&quot;), Expected_Close_Date__c    =   null)</errorConditionFormula>
    <errorMessage>MUST HAVE EXPECTED CLOSE DATE FOR THIS STAGE</errorMessage>
</ValidationRule>