force-app/main/default/objects/SFDC_Target_Company__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Annual_Revenue__c</columns>
    <columns>Country_Presence__c</columns>
    <columns>Employees__c</columns>
    <columns>Markets__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>